--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "client": "npm run start --prefix ../client",
+    "client": "npm run start --prefix ../teleprompter",
     "start": "node index.js",
     "dev": "concurrently \"npm run start\" \"npm run client\""
   },
