--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "npm run start --prefix ../teleprompter",
     "start": "node index.js",
-    "dev": "concurrently \"npm run start\" \"npm run client\""
+    "devplus": "concurrently \"npm run start\" \"npm run client\"",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "node": "^12.8.1",
+    "nodemon": "^2.0.2",
     "react-router": "^5.1.2",
     "socket.io": "^2.3.0"
   },
