--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.3",
     "node": "^12.8.1",
+    "nodemailer": "^6.4.6",
+    "nodemailer-express-handlebars": "^4.0.0",
     "nodemon": "^2.0.2",
     "react-router": "^5.1.2",
     "socket.io": "^2.3.0",
