modifying endpoints to new version

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "server",
     "socker.io"
   ],
+  "engines": {
+    "node": "12.x"
+  },
   "author": "zilahir",
   "license": "ISC",
   "bugs": {
