--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "nodemailer-express-handlebars": "^4.0.0",
     "nodemon": "^2.0.2",
     "react-router": "^5.1.2",
+    "serverless-http": "^2.5.0",
     "socket.io": "^2.3.0",
     "uuid": "^7.0.2"
   },
